--- a/examples.html
+++ b/examples.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Engineering Handbook - Six Sigma: Module 1</title>
+    <title>Engineering Handbook - Dynamics</title>
     <link rel="stylesheet" href="assets/style.css">
     <!-- Favicons -->
     <link rel="icon" type="image/x-icon" href="assets/favicon_io/favicon.ico" sizes="16x16 32x32 64x64">
