--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
         </header>
         <main>
             <!--Overview-->
-            <h2>What is Dynamics?</h2>
-            <p>Dynamics is the branch of mechanics that studies the motion of bodies under the influence of forces. It covers kinematics, describing motion (position, velocity, acceleration), and kinetics, analyzing forces causing motion, including rotation and vibration. Key concepts include momentum, energy, and torque, applied to systems like vehicles, machinery, and projectiles. Dynamics is crucial for engineering designs, ensuring safe and efficient motion in structures and devices.</p>
+            <section>
+                <h2>What is Dynamics?</h2>
+                <p>Dynamics is the branch of mechanics that studies the motion of bodies under the influence of forces. It covers kinematics, describing motion (position, velocity, acceleration), and kinetics, analyzing forces causing motion, including rotation and vibration. Key concepts include momentum, energy, and torque, applied to systems like vehicles, machinery, and projectiles. Dynamics is crucial for engineering designs, ensuring safe and efficient motion in structures and devices.</p>
+            </section>
             <!--Equations-->
             <section>
                 <h2>1. Kinematics (Rectilinear Motion)</h2>
